fix: remove duplicate overflow

--- a/frontend/src/components/profile-info/components/activities/styles.module.scss
+++ b/frontend/src/components/profile-info/components/activities/styles.module.scss
@@ -49,7 +49,6 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 2;
 
-        overflow: hidden;
         line-height: 2rem;
         overflow: hidden;
         text-overflow: ellipsis;
